# quant-ml-intraday

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  404.html  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  features.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
architecture/: index.html
configs/: backtest.yaml  data.yaml  features.yaml  model.yaml
docs/: architecture.md  index.md  methodology.md  research_notes.md  results.md  risk_management.md
methodology/: index.html
reports/: backtest_results.csv  summary.md  summary.txt
results/: index.html
scripts/: generate_report.py
search/: search_index.json
site/: index.html
site/research_notes/: index.html
site/risk_management/: index.html
src/quantml/: __init__.py
src/quantml/backtest/: engine.py  evaluation.py
src/quantml/features/: ohlc.py
src/quantml/io/: loaders.py
src/quantml/modeling/: datasets.py  metrics.py  models.py  train.py
src/quantml/pipelines/: research.py
src/quantml/utils/: config.py  logging.py
tests/: test_backtest.py  test_features.py  tests_models.py
